# PhotoEncoder

./: README.md
backend/: Cargo.toml  Dockerfile  extracted.txt  otu.txt  secret.txt
backend/src/: handlers.rs  main.rs  stego.rs
frontend/: bun.lockb  package.json
frontend/app/: layout.js  page.js
