[package]
name =  "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
aes-gcm = "0.10"
actix-cors = "0.6"
aes = "0.8"
rand = "0.8"
sha2 = "0.10"
actix-web = "4"
actix-multipart = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
image = "0.25"
bytes = "1"
